Fix alt+0 conflict Filter webpage description urls Don't show ads in own channels Layout fixes Fix toggling media mute by click Force `object-fit: contain` for stickers `StickersHelper` & `EmojiHelper` fixes: flickering & navigation

--- a/src/scss/partials/_chatBubble.scss
+++ b/src/scss/partials/_chatBubble.scss
@@ -2321,6 +2321,7 @@
     .reply {
       margin: .25rem 0 0;
       padding: 0;
+      width: auto;
       height: auto;
       max-height: none;
     }
