--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1512,7 +1512,7 @@ middle-ellipsis-element {
 
 .media-sticker {
   margin: auto;
-  object-fit: contain;
+  object-fit: contain !important;
   width: 100%;
   height: 100%;
   max-width: 100%;
